[EuiDescribedFormGroup] Fixed vertical alignment, wrapping of description text
- Adds a `<p>` wrapper to description if it’s just a string
- Removes all the padding classes that tried to calculate margin based on title size
- Adds `alignItems="baseline”` to the flex group adding a pseudo element to form rows that don’t contain labels

--- a/src/components/form/described_form_group/_described_form_group.scss
+++ b/src/components/form/described_form_group/_described_form_group.scss
@@ -17,22 +17,14 @@
     min-width: 0; // Needed to support shrinking appropriately with viewport (prevents x-axis content overflow)
   }
 
-  .euiDescribedFormGroup__fieldPadding {
-    &--xxxsmall {padding-top: ($euiFontSizeXS * 1.5) - $euiFontSizeXS + 2px;}
-    &--xxsmall {padding-top: ($euiFontSizeS * 1.5) - $euiFontSizeXS + 2px;}
-    &--xsmall {padding-top: ($euiFontSize * 1.5) - $euiFontSizeXS + 2px;}
-    &--small {padding-top: ($euiFontSizeL * 1.5) - $euiFontSizeXS + 2px;}
-    &--medium {padding-top: ($euiFontSizeXL * 1.5) - $euiFontSizeXS + 2px;}
-    &--large {padding-top: ($euiFontSizeXXL * 1.5) - $euiFontSizeXS + 2px;}
-  }
+  .euiDescribedFormGroup__fields > .euiFormRow--hasEmptyLabelSpace:first-child,
+  .euiDescribedFormGroup__fields > .euiFormRow:first-child:not(.euiFormRow--hasLabel) {
+    // Remove the forced margin
+    margin-top: 0;
 
-  @include euiBreakpoint('xs', 's') {
-    .euiDescribedFormGroup__fields {
-      padding-top: 0;
-
-      > .euiFormRow--hasEmptyLabelSpace:first-child {
-        padding-top: 0;
-      }
+    // This fakes out flex into thinking there's text before the input and therefor aligns properly to the baseline
+    &::before {
+      content: '';
     }
   }
 }
